--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "payload": "^1.6.4",
-    "payload-cloudinary-plugin": "^0.0.11"
+    "payload-cloudinary-plugin": "^0.0.11",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
